syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = "gen/auth";

package auth;

service AuthService {
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest) returns (AuthResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (UserResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string user_name = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message ValidateTokenRequest {
    string token = 1;
}

message RefreshTokenRequest {
    string refresh_token = 1;
    string access_token = 2;
}

message AuthResponse{
    string access_token = 1;
    string refresh_token = 2;
    google.protobuf.Timestamp expires_at = 3;
    string user_id = 4;
}

message UserResponse{
    bool valid = 1;
    string user_id = 2;
    string email = 3;
    string user_name = 4;
    google.protobuf.Timestamp token_expires_at = 5;
}