syntax = "proto3";

option go_package = "gen/event";

package event;


service EventService {
  rpc CreateEvent(CreateEventRequest) returns (EventResponse);
  rpc GetEvent(GetEventRequest) returns (EventResponse);
  rpc JoinEvent(JoinEventRequest) returns (JoinEventResponse);
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse);
}

message CreateEventRequest {
  string title = 1;
  string description = 2;
  string date = 3;
  string organizer_id = 4;
}


message GetEventRequest {
  string event_id = 1;
}

message JoinEventRequest {
  string event_id = 1;
  string user_id = 2;
}

message EventResponse {
  string event_id = 1;
  string title = 2;
  string description = 3;
  string date = 4;
  string organizer_id = 5;
}

message JoinEventResponse {
  bool success = 1;
  string message = 2;
  string join_id = 3;
}

message ListEventsRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListEventsResponse {
    repeated EventResponse events = 1;
    int32 total_count = 2;
    int32 page = 3;
}